<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fit to Perform</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_results_display">Results</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_setup_mode">Setup Mode</string>
     <string name="title_activity_about">About</string>
    <string name="main_menu">Main Menu</string>
    <string name="event">event</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="image_descript">Image</string>
    <string name="equal">=</string>

    <!-- Database Strings -->
    <string name="table_name">Results</string>
    <string name="table_name_questionaire">ResultsQuestionaire</string>
    <string name="table_name_multi_settings">MultiUserSettings</string>
    <string name="event_name">EventName</string>
    <string name="event_score">EventScore</string>
    <string name="timestamp">Timestamp</string>
    <string name="notes">Notes</string>
    <string name="sent">Sent</string>
    <string name="total_sleep">TotalSleep</string>
    <string name="light_sleep">LightSleep</string>
    <string name="sound_sleep">SoundSleep</string>
    <string name="heart_rate">RestingHR</string>
    <string name="ratings">Ratings</string>
    <string name="user_group">UserGroup</string>
    <string name="user_id">UserId</string>
    <string name="user_name">UserName</string>
    <string name="user_settings">Settings</string>
    <string name="user_email">Email</string>
    <string name="group_icon">GroupIcon</string>
    <string name="tries">Tries</string>
    <string name="all_scores">AllEventScores</string>

    <!-- Action Bar Strings -->
    <string name="action_settings">Settings</string>
    <string name="action_send_all">Send All Results</string>
    <string name="action_send_recent">Send Recent Results</string>
    <string name="action_send_results">Show Results</string>
    <string name="action_event_info">Event Info</string>
    <string name="action_delete_all">Delete All Events</string>
    <string name="action_setup">Setup Mode</string>
    <string name="action_add_group">Add New Group</string>
    <string name="action_switch">Switch Users</string>
    <string name="action_home">Go to Main Menu</string>
    <string name="action_about">About</string>
    <string name="action_email_intent">Send Results via Email App</string>

    <!-- Main Menu Strings -->
    <string name="title_section1">Attention</string>
    <string name="title_section2">Memory</string>
    <string name="title_section3">Motor</string>

    <!-- Finger Tap Test Strings -->
    <string name="tap_click_info_3">Keep on Tapping</string>
    <string name="tap_click_info_count">Tap Count: 0</string>
    <string name="tap_click_info_time">Time Left: 5s</string>

    <!-- Even or Vowel Test Strings -->
    <string name="ev_even">Even</string>
    <string name="ev_vowel">Vowel</string>

    <!-- Questionaire Strings -->
    <string name="quest_total">Total Sleep:</string>
    <string name="quest_light">Light Sleep:</string>
    <string name="quest_sound">Sound Sleep:</string>
    <string name="quest_hr">Resting HR:</string>
    <string name="quest_if_known">(If Known)</string>
    <string name="quest_low">Very Low</string>
    <string name="quest_high">Very High</string>
    <string name="quest_avg">Average</string>
    <string name="quest_questions">Questions</string>

    <!-- Result Display Strings -->
    <string name="results_dis_title">Results</string>
    <string name="results_dis_graphs">All Graph List</string>

    <!-- Event Instructions Strings -->
    <string name="instructions">Instructions</string>

    <!-- Event Name Strings -->
    <string name="event_name_finger_tap">Finger Tap Test</string>
    <string name="event_name_appear_obj">Appearing Object</string>
    <string name="event_name_appear_obj_fixed">Appearing Object - Fixed Point</string>
    <string name="event_name_stroop">Stroop Test</string>
    <string name="event_name_questionaire">Questionaire</string>
    <string name="event_name_one_card">One Card Learning Test</string>
    <string name="event_name_change_direct">Changing Directions</string>
    <string name="event_name_pattern_recreate">Pattern Recreation</string>
    <string name="event_name_even_vowel">Even or Vowel</string>
    <string name="event_name_chase">Chase Test</string>
    <string name="event_name_center_arrow">Arrow Ignoring Test</string>
    <string name="event_name_monkey">Monkey Ladder</string>

    <!-- Start/Done Strings -->
    <string name="start_square">Tap in the Square to Start</string>
    <string name="restart_square">Tap in the Square to Restart</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>

    <!-- Yes/No Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="match">Match</string>
    <string name="no_match">No Match</string>

    <!-- Next/Back Strings -->
    <string name="next">Next</string>
    <string name="back">Back</string>

    <!-- Setup Mode Strings -->
    <string name="setup_mode_password">123</string>
    <!-- <string name="setup_mode_password">entersetupmode</string> -->
    <string name="setup_mode_default_email">activitytrackers@gmail.com</string>
    <string name="setup_mode_set">Set</string>
    <string name="setup_mode_user_title">Multi User Settings</string>
    <string name="setup_mode_add">Add New User</string>
    <string name="setup_mode_remove">Remove User(s)</string>
    <string name="setup_mode_user_single">Single User</string>
    <string name="setup_mode_user_multi">Multi User</string>
    <string name="setup_mode_groups">Groups and Users</string>
    <string name="setup_mode_group_name_hint">Group Name</string>
    <string name="setup_mode_default_user_name_single">Single</string>

    <!-- Preference Catageroy Strings -->
    <string name="settings_cat_event">Event Settings</string>
    <string name="settings_cat_results">Results Settings</string>
    <string name="settings_cat_tests">Tests</string>
    <string name="settings_cat_email">Email</string>
    <string name="settings_cat_other">Other</string>
    <string name="settings_cat_user">User Info</string>

    <!-- Preference Title Strings -->
    <string name="settings_title_instruct">Show Instructions Page</string>
    <string name="settings_title_user">User Mode</string>
    <string name="settings_title_results">Show Results Page</string>
    <string name="settings_title_email">Set Email Address</string>
    <string name="settings_title_alert">Set Reminder Time</string>
    <string name="settings_title_remind">Enable Reminders</string>
    <string name="settings_title_sleep">Show Light/Sound Sleep</string>
    <string name="settings_title_user_name">Username</string>
    <string name="settings_title_theme">Change Theme</string>

    <!-- Preference Summary Strings -->
    <string name="settings_sum_instruct">Enable/Disable the event\ninstructions page</string>
    <string name="settings_sum_user">Select User Mode</string>
    <string name="settings_sum_results">Enable/Disable the results page</string>
    <string name="settings_sum_test">Enable/Disable the Test</string>
    <string name="settings_sum_email">Set email address to send results to.</string>
    <string name="settings_sum_alert">Set Time this App Sends You a Reminder</string>
    <string name="settings_sum_remind">Enable/Disable Reminders</string>
    <string name="settings_sum_sleep">Enable/Disable Light/Sound\nSleep Durations</string>
    <string name="settings_sum_user_name">Set Username</string>

    <!-- Preference Key Strings -->
    <string name="pref_key_instruct">pref_event_show_instruct</string>
    <string name="pref_key_user">pref_event_user</string>
    <string name="pref_key_results">pref_event_show_results</string>
    <string name="pref_key_email">pref_event_email</string>
    <string name="pref_key_multi_email">pref_event_multi_email</string>
    <string name="pref_key_test">pref_event_test</string>
    <string name="pref_key_alert">pref_event_alert</string>
    <string name="pref_key_remind">pref_event_remind</string>
    <string name="pref_key_user_id">pref_event_user_id</string>
    <string name="pref_key_alert_next">pref_next_alarm</string>
    <string name="pref_key_sleep">pref_next_sleep</string>
    <string name="pref_key_user_name">pref_next_user_name</string>
    <string name="pref_key_theme">pref_theme</string>

    <!-- Preference Key Strings for Single User Mode Tests -->
    <string name="pref_key_ao">pref_event_show_ao</string>
    <string name="pref_key_aof">pref_event_show_aof</string>
    <string name="pref_key_ai">pref_event_show_ai</string>
    <string name="pref_key_cd">pref_event_show_cd</string>
    <string name="pref_key_ch">pref_event_show_ch</string>
    <string name="pref_key_eov">pref_event_show_eov</string>
    <string name="pref_key_ftt">pref_event_show_ftt</string>
    <string name="pref_key_ml">pref_event_show_ml</string>
    <string name="pref_key_oclt">pref_event_show_oclt</string>
    <string name="pref_key_pr">pref_event_show_pr</string>
    <string name="pref_key_s">pref_event_show_s</string>

    <!-- Other Settings Strings -->
    <string name="settings_time_default">9:00</string>
   <!--  <string name="settings_theme_default">Default</string> -->
  <!-- <string name="settings_theme_default">Magic</string> -->
    <string name="settings_theme_default">Forestry</string>
    
    <!-- About Page Strings -->
    <string name="about_purpose_title">Purpose</string>
    <string name="about_purpose_text">This research is being conducted as part of two larger research projects. 
        The first is being undertaken by Matt Driller of the School of Education and involves performance and recovery of elite athletes. 
        The second is being undertaken by Judy Bowen and Annika Hinze and involves correlating sleep data with cognitive and physical response times.</string>
    <string name="about_dev_title">Developers</string>
    <string name="about_dev_text1">Mathew Andela - mathew.andela@gmail.com</string>
    <string name="about_dev_text3">Judy Bowen - jbowen@cs.waikto.ac.nz</string>
    <string name="about_dev_text2">Annika Hinze - hinze@cs.waikato.ac.nz</string>
    <string name="about_design_title">Designers</string>
    <string name="about_design_text">Kristy Wright - kaw37@students.waikato.ac.nz</string>

</resources>