<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:title="@string/settings_cat_event">
        <uni.apps.responsetesting.settings.UserModePreference
            android:defaultValue="true"
            android:key="@string/pref_key_user"
            android:summary="@string/settings_sum_user"
            android:title="@string/settings_title_user" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_instruct"
            android:summary="@string/settings_sum_instruct"
            android:title="@string/settings_title_instruct" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings_cat_results">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_results"
            android:summary="@string/settings_sum_results"
            android:title="@string/settings_title_results" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings_cat_other">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_remind"
            android:summary="@string/settings_sum_remind"
            android:title="@string/settings_title_remind" />
        <uni.apps.responsetesting.settings.ReminderTimePreference
            android:dependency="@string/pref_key_remind"
            android:defaultValue="@string/settings_time_default"
            android:key="@string/pref_key_alert"
            android:summary="@string/settings_sum_alert"
            android:title="@string/settings_title_alert" />
    </PreferenceCategory>

</PreferenceScreen>
