<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/image_descript"
                android:src="@drawable/uni_logo" />

            <TextView
                android:id="@+id/title"
                style="@style/palatino_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:text="@string/action_about" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/title"
                android:contentDescription="@string/image_descript"
                android:src="@drawable/divider" />
        </RelativeLayout>

        <TextView
            android:text="@string/about_purpose_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="5dp"
            style="@style/about_text" />
        
        <TextView
            android:text="@string/about_purpose_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/about_text" />
        
        <TextView
            android:text="@string/about_dev_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="15dp"
            style="@style/about_text" />
        
        <TextView
            android:text="@string/about_dev_text1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/about_text" />
        <TextView
            android:text="@string/about_dev_text2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/about_text" />
        <TextView
            android:text="@string/about_dev_text3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/about_text" />
        
        <TextView
            android:text="@string/about_design_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="15dp"
            style="@style/about_text" />
        
        <TextView
            android:text="@string/about_design_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/about_text" />
        
    </LinearLayout>

</ScrollView>