<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title_email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/multi_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="6"
            android:maxLines="3"
            android:text="@string/setup_mode_default_email"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/multi_email_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/setup_mode_set" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/setup_mode_groups"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ExpandableListView
        android:id="@+id/multi_expand_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true" >
    </ExpandableListView>

</LinearLayout>