<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/pattern_title"
        style="@style/palatino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name_pattern_recreate" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pattern_start"
        android:layout_below="@+id/pattern_title"
        android:background="@drawable/layout_border" >

        <GridView
            android:id="@+id/pattern_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/Black"
            android:horizontalSpacing="1dp"
            android:scrollbars="none"
            android:verticalSpacing="1dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/pattern_start"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_instruct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/instructions"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</RelativeLayout>